--- a/insightserenity/views/users/register.ejs
+++ b/insightserenity/views/users/register.ejs
@@ -29,12 +29,12 @@
                 </p>
                 <form action="/insightserenity/user/register" method="POST" class="validated-form" novalidate>
                     <div class="mb-3">
-                        <label for="firstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" required>
+                        <label for="firstname" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="firstname" name="firstname" required>
                     </div>
                     <div class="mb-3">
-                        <label for="lastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" required>
+                        <label for="lastname" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastname" name="lastname" required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
@@ -61,8 +61,8 @@
                         <input type="text" class="form-control" id="contactNumber" name="contactNumber">
                     </div>
                     <div class="mb-3">
-                        <label for="profilePicture" class="form-label">Profile Picture</label>
-                        <input type="file" class="form-control" id="profilePicture" name="profilePicture">
+                        <label for="profilePicture" class="form-label">Profile Picture URL</label>
+                        <input type="text" class="form-control" id="profilePicture" name="profilePicture" placeholder="Enter the URL of your profile picture">
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Register</button>
                 </form>
@@ -71,6 +71,3 @@
         </div>
     </div>
 </section><!-- End Register Section -->
-
-
-
