--- a/insightserenity/views/partials/navbar.ejs
+++ b/insightserenity/views/partials/navbar.ejs
@@ -24,7 +24,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Settings & Privacy</a></li>
-                <li><a href="/user/logout" class="text-danger">Logout</a></li>
+                <li><a href="/insightserenity/user/logout" class="text-danger">Logout</a></li>
               </ul>
             </li>
           <% } else if (currentUser.role === 'client') { %>
@@ -41,7 +41,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Settings & Privacy</a></li>
-                <li><a href="/user/logout" class="text-danger">Logout</a></li>
+                <li><a href="/insightserenity/user/logout" class="text-danger">Logout</a></li>
               </ul>
             </li>
           <% } %>
