--- a/insightserenity/views/layouts/boilerplate.ejs
+++ b/insightserenity/views/layouts/boilerplate.ejs
@@ -21,6 +21,7 @@
     <link href="/insightserenity/public/lib/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="/insightserenity/public/lib/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Template Main CSS File -->
     <link href="/insightserenity/public/css/style.css" rel="stylesheet">
