--- a/insightserenity/views/home/about.ejs
+++ b/insightserenity/views/home/about.ejs
@@ -16,28 +16,27 @@
   </div>
 </div>
 <!-- Header End -->
+
 <!-- ======= About Section ======= -->
 <section id="about" class="about">
     <div class="container" data-aos="fade-up">
 
       <div class="row">
         <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-          <img src="lib/img/about.jpg" class="img-fluid" alt="">
+          <img src="lib/img/about.jpg" class="img-fluid" alt="About Us">
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-          <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+          <h3>Empowering You with Insightful Consultancy</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            At InsightSerenity, we are dedicated to providing top-tier consultancy services, leveraging our deep expertise in IT, data science, and life literacy coaching. Established by Emmanuel Oyemosu in 2023, our firm is built on the principles of excellence, integrity, and impactful guidance.
           </p>
           <ul>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+            <li><i class="ri-check-double-line"></i> Expert IT and data science consulting to drive your business forward.</li>
+            <li><i class="ri-check-double-line"></i> Life literacy coaching rooted in biblical principles for personal and professional growth.</li>
+            <li><i class="ri-check-double-line"></i> Commitment to delivering tailored solutions and unparalleled support to our clients.</li>
           </ul>
           <p>
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+            With a mission to empower individuals and organizations alike, InsightSerenity blends cutting-edge technology with deep-seated values to offer solutions that are not only effective but also transformative. Join us on a journey of insight, serenity, and success.
           </p>
         </div>
       </div>
