--- a/insightserenity/views/home/contact.ejs
+++ b/insightserenity/views/home/contact.ejs
@@ -44,13 +44,13 @@
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com</p>
+              <p><a href="mailto:Emmanuel.ao@outlook.com">Emmanuel.ao@outlook.com</a></p>
             </div>
 
             <div class="phone">
               <i class="bi bi-phone"></i>
               <h4>Call:</h4>
-              <p>+1 5589 55488 55s</p>
+              <p><a href="tel:+13463839529">+1 346 383 9529</a></p>
             </div>
 
           </div>
