--- a/insightserenity/views/services/service.ejs
+++ b/insightserenity/views/services/service.ejs
@@ -23,9 +23,16 @@
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h2>Services</h2>
-            <p>Check our Services</p>
+            <h2>Our Powerful Services</h2>
+            <p>Transform Your Life and Business with Our Expertise</p>
         </div>
+
+        <p class="fst-italic">
+            At InsightSerenity, we offer a range of services designed to empower you with the tools and knowledge needed for personal and professional success. Our consultancy is not just about providing solutions; it's about transforming potential into reality. With our comprehensive approach, we ensure that every client receives tailored, impactful guidance that drives meaningful results.
+        </p>
+        <p>
+            Whether you're looking to enhance your IT infrastructure, harness the power of data science, or seek life literacy coaching rooted in biblical principles, our team is dedicated to delivering excellence. Our services are designed to meet your unique needs, helping you navigate challenges, seize opportunities, and achieve your goals with confidence and clarity.
+        </p>
 
         <% if (services.length > 0) { %>
             <div class="row">
@@ -51,4 +58,3 @@
 
     </div>
 </section><!-- End Services Section -->
-
