--- a/insightserenity/views/home/team.ejs
+++ b/insightserenity/views/home/team.ejs
@@ -31,7 +31,7 @@
       <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member" data-aos="fade-up" data-aos-delay="100">
           <div class="member-img">
-            <img src="/lib/img/team/team-1.jpg" class="img-fluid" alt="">
+            <img src="lib/img/team/ceo.jpeg" class="img-fluid" alt="">
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="member-info">
-            <h4>Walter White</h4>
+            <h4>Emmanuel Oyemosu</h4>
             <span>Chief Executive Officer</span>
           </div>
         </div>
@@ -49,7 +49,7 @@
       <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member" data-aos="fade-up" data-aos-delay="200">
           <div class="member-img">
-            <img src="/lib/img/team/team-2.jpg" class="img-fluid" alt="">
+            <img src="lib/img/team/team-2.jpg" class="img-fluid" alt="">
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -67,7 +67,7 @@
       <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member" data-aos="fade-up" data-aos-delay="300">
           <div class="member-img">
-            <img src="/lib/img/team/team-3.jpg" class="img-fluid" alt="">
+            <img src="lib/img/team/team-3.jpg" class="img-fluid" alt="">
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -85,7 +85,7 @@
       <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
         <div class="member" data-aos="fade-up" data-aos-delay="400">
           <div class="member-img">
-            <img src="/lib/img/team/team-4.jpg" class="img-fluid" alt="">
+            <img src="lib/img/team/team-4.jpg" class="img-fluid" alt="">
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
