fixed some issues

--- a/insightserenity/views/partials/navbar.ejs
+++ b/insightserenity/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <header id="header" class="fixed-top">
   <div class="container d-flex align-items-center justify-content-lg-between">
-    <h1 class="logo me-auto me-lg-0"><a href="/insightserenity/">DF<span>.</span></a></h1>
+    <h1 class="logo me-auto me-lg-0"><a href="/insightserenity/">IS<span>.</span></a></h1>
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
         <li><a class="nav-link scrollto active" href="/insightserenity/">Home</a></li>
