--- a/insightserenity/views/clients/edit.ejs
+++ b/insightserenity/views/clients/edit.ejs
@@ -266,19 +266,20 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-    <!-- Vendor JS Files -->
-  <script src="/insightserenity/public/lib/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/insightserenity/public/lib/vendor/aos/aos.js"></script>
-  <script src="/insightserenity/public/lib/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/insightserenity/public/lib/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/insightserenity/public/lib/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/insightserenity/public/lib/vendor/php-email-form/validate.js"></script>
+<!-- Vendor JS Files -->
+<script src="/insightserenity/public/lib/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="/insightserenity/public/lib/vendor/aos/aos.js"></script>
+<script src="/insightserenity/public/lib/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/insightserenity/public/lib/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="/insightserenity/public/lib/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="/insightserenity/public/lib/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="/insightserenity/public/lib/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="/insightserenity/public/js/main.js"></script>
+<!-- Template Main JS File -->
+<script src="/insightserenity/public/lib/js/main.js"></script>
