--- a/insightserenity/views/clients/profile.ejs
+++ b/insightserenity/views/clients/profile.ejs
@@ -21,6 +21,7 @@
     <link href="/insightserenity/public/lib/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="/insightserenity/public/lib/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Template Main CSS File -->
     <link href="/insightserenity/public/css/style.css" rel="stylesheet">
@@ -56,7 +57,7 @@
 <body class="d-flex flex-column vh-100">
   <header id="header" class="fixed-top bg-black">
     <div class="container d-flex align-items-center justify-content-lg-between">
-        <h1 class="logo me-auto me-lg-0"><a href="/insightserenity/">DF<span>.</span></a></h1>
+        <h1 class="logo me-auto me-lg-0"><a href="/insightserenity/">Insightserenity<span>.</span></a></h1>
         <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
                 <li><a class="nav-link scrollto active" href="/insightserenity/">Home</a></li>
@@ -244,81 +245,87 @@
 
 
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-info">
-              <h3>Gp<span>.</span></h3>
-              <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
-              </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
+    <!-- ======= Footer ======= -->
+        <footer id="footer">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+    
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-info">
+                            <h3>InsightSerenity</h3>
+                            <p>
+                                Houston, TX <br>
+                                77036<br><br>
+                                <strong>Phone:</strong> <a href="tel:3463839529">346-383-9529</a><br>
+                                <strong>Email:</strong> <a href="mailto:emmanuel.ao@outlook.com">Emmanuel.ao@outlook.com</a><br>
+                            </p>
+                            <div class="social-links mt-3">
+                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-lg-2 col-md-6 footer-links">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/about">About us</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/service/">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/terms">Terms of service</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/privacy">Privacy policy</a></li>
+                        </ul>
+                    </div>
+    
+                    <div class="col-lg-3 col-md-6 footer-links">
+                    <h4>Our Services</h4>
+                    <ul>
+                        <% if (services && services.length > 0) { %>
+                            <% services.forEach(service => { %>
+                                <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/service/<%= service._id %>"><%= service.name %></a></li>
+                            <% }) %>
+                        <% } else { %>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#">No services available</a></li>
+                        <% } %>
+                    </ul>
+                    </div>
+    
+                    <div class="col-lg-4 col-md-6 footer-newsletter">
+                        <h4>Our Newsletter</h4>
+                        <p>Stay updated with the latest insights and news from InsightSerenity. Subscribe to our newsletter.</p>
+                        <form action="" method="post">
+                            <input type="email" name="email"><input type="submit" value="Subscribe">
+                        </form>
+                    </div>
+    
+                </div>
             </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div>
-
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+    
+        <div class="container">
+            <div class="copyright">
+                &copy; Copyright <strong><span>InsightSerenity</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
+        </div>
+        </footer>
+    <!-- End Footer -->
+  
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 <!-- Vendor JS Files -->
 <script src="/insightserenity/public/lib/vendor/purecounter/purecounter_vanilla.js"></script>
